# SimpleTrasser

./: CMakeLists.txt  Light.h  Material.h  README.md  Sphere.cpp  Sphere.h  geometry.h  main.cpp
